[tool.poetry]
name = "LEXI-GUI"
version = "0.2.3"
description = "GUI for LEXI data visualization"
authors = ["Ramiz A. Qudsi <qudsira@bu.edu>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.2.3"
seaborn = "^0.11.2"
tabulate = "^0.8.9"
pyinstaller = "^5.1"
tk = "^0.1.0"
Wand = "^0.6.10"
bokeh = "^3.1.0"
matplotlib = "3.5.2"
paramiko = "^3.1.0"
spacepy = "^0.7.0"
plotly = "^5.24.1"
dash = "^2.18.2"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.159.0"
gdown = "^5.2.0"
numpy = "^2.2.2"
requests = "^2.32.3"
pyopenssl = "^25.0.0"
oauth2client = "^4.1.3"
gspread = "^6.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
